[package]
name = "minimal-egui"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
anyhow = "1.0.82"
egui = "0.23"
egui-wgpu = "0.23"
egui-winit = { version = "0.23", default-features = false, features = ["links"] }
env_logger = "0.10"
error-iter = "0.4"
image = "0.25.1"
include_dir = "0.7.3"
log = "0.4"
pixels = { path = "../.." }
winit = "0.28"
winit_input_helper = "0.14"
